[gd_scene load_steps=5 format=2]

[ext_resource path="res://Gameplay/Scripts/Elements/World.gd" type="Script" id=1]
[ext_resource path="res://Gameplay/Assets/tilegocell.png" type="Texture" id=2]
[ext_resource path="res://Gameplay/Assets/RevampGoCellTile.res" type="TileSet" id=3]
[ext_resource path="res://Gameplay/Scenes/Elements/Player.tscn" type="PackedScene" id=4]

[node name="World" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Backwall" type="Sprite" parent="." index="0"]

visible = false
position = Vector2( -225.129, 424.997 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 200, 0, 50, 50 )
_sections_unfolded = [ "Region" ]

[node name="Backwall2" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( -174.951, 375.306 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 200, 0, 50, 50 )
_sections_unfolded = [ "Region" ]

[node name="Backwall3" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( -125.208, 325.023 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 200, 0, 50, 50 )
_sections_unfolded = [ "Region" ]

[node name="TileMap" type="TileMap" parent="." index="3"]

position = Vector2( -100, 0 )
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 50, 50 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 196595, 0, 0, 196596, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 262131, 0, 0, 262132, 4, 0, 262133, 4, 0, 262139, 0, 0, 327667, 0, 0, 327668, 4, 0, 327669, 4, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 393203, 0, 0, 393204, 4, 0, 393205, 4, 0, 327690, 0, 0, 327695, 0, 0, 327709, 0, 0, 458739, 0, 0, 458740, 1, 0, 458741, 1, 0, 458742, 1, 0, 458743, 1, 0, 393245, 0, 0, 393246, 0, 0, 393247, 3, 0, 524275, 0, 0, 524276, 4, 0, 524277, 4, 0, 458781, 0, 0, 458783, 0, 0, 458784, 3, 0, 589811, 0, 0, 589812, 4, 0, 589813, 4, 0, 524295, 0, 0, 524301, 0, 0, 524306, 0, 0, 524317, 0, 0, 524320, 0, 0, 524321, 3, 0, 655347, 0, 0, 655348, 1, 0, 655349, 1, 0, 655350, 1, 0, 655351, 1, 0, 655352, 1, 0, 655353, 1, 0, 655354, 1, 0, 655355, 1, 0, 655356, 1, 0, 655357, 1, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 0, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 0, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 0, 0, 589843, 1, 0, 589844, 1, 0, 589845, 3, 0, 589853, 0, 0, 589857, 0, 0, 589858, 3, 0, 655381, 0, 0, 655382, 3, 0, 655389, 0, 0, 655394, 0, 0, 655395, 3, 0, 720918, 0, 0, 720919, 3, 0, 720925, 0, 0, 720931, 0, 0, 720932, 3, 0, 786455, 0, 0, 786456, 3, 0, 786468, 0, 0, 786469, 0, 0, 851992, 0, 0, 851993, 3, 0, 852005, 0, 0, 852006, 0, 0, 917529, 0, 0, 917530, 3, 0, 917542, 0, 0, 917543, 0, 0, 983066, 0, 0, 983067, 3, 0, 983079, 0, 0, 983080, 0, 0, 1048603, 0, 0, 1048604, 3, 0, 1048616, 0, 0, 1048617, 0, 0, 1114140, 0, 0, 1114141, 3, 0, 1114153, 0, 0, 1114154, 0, 0, 1179677, 0, 0, 1179678, 3, 0, 1179690, 0, 0, 1179691, 0, 0, 1245214, 0, 0, 1245215, 3, 0, 1245216, 1, 0, 1245227, 0, 0, 1245228, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310764, 0, 0, 1310765, 0, 0, 1376288, 0, 0, 1376289, 3, 0, 1376301, 0, 0, 1376302, 0, 0, 1441825, 0, 0, 1441826, 3, 0, 1441838, 0, 0, 1441839, 0, 0, 1507362, 0, 0, 1507363, 3, 0, 1507375, 0, 0, 1507376, 0, 0, 1572899, 0, 0, 1572900, 3, 0, 1572911, 0, 0, 1572912, 0, 0, 1572913, 0, 0, 1638436, 0, 0, 1638437, 3, 0, 1638447, 0, 0, 1638449, 0, 0, 1638450, 0, 0, 1703973, 0, 0, 1703974, 3, 0, 1703983, 0, 0, 1703986, 0, 0, 1703987, 0, 0, 1769510, 0, 0, 1769511, 3, 0, 1769519, 0, 0, 1769523, 0, 0, 1769524, 0, 0, 1835047, 0, 0, 1835048, 3, 0, 1835060, 0, 0, 1835061, 0, 0, 1900584, 0, 0, 1900585, 3, 0, 1900597, 0, 0, 1900598, 0, 0, 1966121, 0, 0, 1966122, 3, 0, 1966123, 2, 0, 1966134, 0, 0, 1966135, 0, 0, 2031658, 0, 0, 2031659, 0, 0, 2031671, 0, 0, 2031672, 0, 0, 2097195, 0, 0, 2097196, 3, 0, 2097208, 0, 0, 2097209, 0, 0, 2097239, 0, 0, 2097240, 0, 0, 2097241, 0, 0, 2162732, 0, 0, 2162733, 3, 0, 2162745, 0, 0, 2162746, 0, 0, 2162747, 0, 0, 2162748, 0, 0, 2162749, 0, 0, 2162750, 0, 0, 2162751, 0, 0, 2162752, 0, 0, 2162753, 0, 0, 2162754, 0, 0, 2162755, 0, 0, 2162756, 0, 0, 2162757, 0, 0, 2162758, 0, 0, 2162759, 0, 0, 2162760, 0, 0, 2162761, 0, 0, 2162762, 0, 0, 2162763, 0, 0, 2162764, 0, 0, 2162765, 0, 0, 2162766, 0, 0, 2162767, 0, 0, 2162768, 0, 0, 2162769, 0, 0, 2162770, 0, 0, 2162771, 0, 0, 2162772, 0, 0, 2162773, 0, 0, 2162774, 0, 0, 2162775, 0, 0, 2162776, 0, 0, 2162777, 0, 0, 2162778, 0, 0, 2162779, 0, 0, 2162780, 0, 0, 2162781, 0, 0, 2162782, 0, 0, 2162783, 0, 0, 2162784, 0, 0, 2162785, 0, 0, 2162786, 0, 0, 2162787, 0, 0, 2162788, 0, 0, 2162789, 0, 0, 2162790, 0, 0, 2162791, 0, 0, 2162792, 0, 0, 2162793, 0, 0, 2162794, 0, 0, 2162795, 0, 0, 2162796, 0, 0, 2162797, 0, 0, 2162798, 0, 0, 2162799, 0, 0, 2162800, 0, 0, 2162801, 0, 0, 2162802, 0, 0, 2162803, 0, 0, 2162804, 0, 0, 2162805, 0, 0, 2162806, 0, 0, 2162807, 0, 0, 2162808, 0, 0, 2162809, 0, 0, 2162810, 0, 0, 2162811, 0, 0, 2162812, 0, 0, 2162813, 0, 0, 2162814, 0, 0, 2162815, 0, 0, 2162816, 0, 0, 2162817, 0, 0, 2162818, 0, 0, 2162819, 0, 0, 2162820, 0, 0, 2228269, 0, 0, 2228270, 3, 0, 2228302, 0, 0, 2228318, 0, 0, 2228327, 0, 0, 2228339, 0, 0, 2228347, 0, 0, 2228356, 0, 0, 2293806, 0, 0, 2293807, 3, 0, 2293838, 0, 0, 2293854, 0, 0, 2293863, 0, 0, 2293875, 0, 0, 2293883, 0, 0, 2293892, 0, 0, 2359343, 0, 0, 2359344, 3, 0, 2359374, 0, 0, 2359390, 0, 0, 2359399, 0, 0, 2359411, 0, 0, 2359419, 0, 0, 2359428, 0, 0, 2424880, 0, 0, 2424881, 3, 0, 2424947, 0, 0, 2424955, 0, 0, 2424964, 0, 0, 2490417, 0, 0, 2490418, 3, 0, 2490454, 0, 0, 2490491, 0, 0, 2490500, 0, 0, 2555954, 0, 0, 2555955, 3, 0, 2555990, 0, 0, 2556036, 0, 0, 2621491, 0, 0, 2621492, 3, 0, 2621522, 2, 0, 2621523, 1, 0, 2621524, 1, 0, 2621525, 1, 0, 2621526, 0, 0, 2621527, 1, 0, 2621528, 1, 0, 2621529, 1, 0, 2621530, 3, 0, 2621572, 0, 0, 2687028, 0, 0, 2687029, 3, 0, 2687057, 2, 0, 2687058, 0, 0, 2687059, 0, 0, 2687060, 0, 0, 2687061, 0, 0, 2687062, 0, 0, 2687063, 0, 0, 2687064, 0, 0, 2687065, 0, 0, 2687066, 0, 0, 2687067, 3, 0, 2687076, 2, 0, 2687088, 2, 0, 2687096, 2, 0, 2687108, 0, 0, 2752565, 0, 0, 2752566, 1, 0, 2752567, 1, 0, 2752568, 1, 0, 2752569, 1, 0, 2752570, 1, 0, 2752571, 1, 0, 2752572, 1, 0, 2752573, 1, 0, 2752574, 1, 0, 2752575, 1, 0, 2752576, 1, 0, 2752577, 1, 0, 2752578, 1, 0, 2752579, 1, 0, 2752580, 1, 0, 2752581, 1, 0, 2752582, 1, 0, 2752583, 1, 0, 2752584, 1, 0, 2752585, 1, 0, 2752586, 1, 0, 2752587, 1, 0, 2752588, 1, 0, 2752589, 1, 0, 2752590, 1, 0, 2752591, 1, 0, 2752592, 1, 0, 2752593, 0, 0, 2752594, 0, 0, 2752595, 0, 0, 2752596, 0, 0, 2752597, 0, 0, 2752598, 0, 0, 2752599, 0, 0, 2752600, 0, 0, 2752601, 0, 0, 2752602, 0, 0, 2752603, 0, 0, 2752604, 1, 0, 2752605, 1, 0, 2752606, 1, 0, 2752607, 1, 0, 2752608, 1, 0, 2752609, 1, 0, 2752610, 1, 0, 2752611, 1, 0, 2752612, 0, 0, 2752613, 1, 0, 2752614, 1, 0, 2752615, 1, 0, 2752616, 1, 0, 2752617, 1, 0, 2752618, 1, 0, 2752619, 1, 0, 2752620, 1, 0, 2752621, 1, 0, 2752622, 1, 0, 2752623, 1, 0, 2752624, 0, 0, 2752625, 1, 0, 2752626, 1, 0, 2752627, 1, 0, 2752628, 1, 0, 2752629, 1, 0, 2752630, 1, 0, 2752631, 1, 0, 2752632, 0, 0, 2752633, 1, 0, 2752634, 1, 0, 2752635, 1, 0, 2752636, 1, 0, 2752637, 1, 0, 2752644, 0, 0, 2818173, 0, 0, 2818180, 0, 0, 2883709, 0, 0, 2883716, 0, 0, 2949245, 0, 0, 2949252, 0, 0, 3014781, 0, 0, 3014788, 0, 0, 3080317, 0, 0, 3080324, 0, 0, 3145853, 0, 0, 3145857, 0, 0, 3145858, 0, 0, 3145859, 0, 0, 3145860, 0, 0, 3145861, 0, 0, 3145862, 0, 0, 3145863, 0, 0, 3145864, 0, 0, 3145865, 0, 0, 3145866, 0, 0, 3145867, 0, 0, 3145868, 0, 0, 3145869, 0, 0, 3145870, 0, 0, 3145871, 0, 0, 3145872, 0, 0, 3145873, 0, 0, 3145874, 0, 0, 3145875, 0, 0, 3145876, 0, 0, 3145877, 0, 0, 3145878, 0, 0, 3145879, 0, 0, 3145880, 0, 0, 3145881, 0, 0, 3145882, 0, 0, 3145883, 0, 0, 3145884, 0, 0, 3145885, 0, 0, 3145886, 0, 0, 3145887, 0, 0, 3145888, 0, 0, 3145889, 0, 0, 3145890, 0, 0, 3145891, 0, 0, 3145892, 0, 0, 3145893, 0, 0, 3145894, 0, 0, 3145895, 0, 0, 3145896, 0, 0, 3145897, 0, 0, 3145898, 0, 0, 3145899, 0, 0, 3145900, 0, 0, 3145901, 0, 0, 3145902, 0, 0, 3145903, 0, 0, 3145904, 0, 0, 3145905, 0, 0, 3145906, 0, 0, 3145907, 0, 0, 3145908, 0, 0, 3145909, 0, 0, 3145910, 0, 0, 3145911, 0, 0, 3145912, 0, 0, 3145913, 0, 0, 3145914, 0, 0, 3145915, 0, 0, 3145916, 0, 0, 3145917, 0, 0, 3145918, 0, 0, 3145919, 0, 0, 3145920, 0, 0, 3145921, 0, 0, 3145922, 0, 0, 3145923, 0, 0, 3145924, 0, 0, 3145925, 0, 0, 3145926, 0, 0, 3145927, 0, 0, 3145928, 0, 0, 3145929, 0, 0, 3145930, 0, 0, 3145931, 0, 0, 3145932, 0, 0, 3145933, 0, 0, 3145934, 0, 0, 3145935, 0, 0, 3145936, 0, 0, 3145937, 0, 0, 3145938, 0, 0, 3145939, 0, 0, 3145940, 0, 0, 3145941, 0, 0, 3145942, 0, 0, 3145943, 0, 0, 3145944, 0, 0, 3145945, 0, 0, 3145946, 0, 0, 3145947, 0, 0, 3145948, 0, 0, 3145949, 0, 0, 3145950, 0, 0, 3145951, 0, 0, 3145952, 0, 0, 3145953, 0, 0, 3145954, 0, 0, 3145955, 0, 0, 3145956, 0, 0, 3145957, 0, 0, 3145958, 0, 0, 3145959, 0, 0, 3145960, 0, 0, 3145961, 0, 0, 3145962, 0, 0, 3145963, 0, 0, 3145964, 0, 0, 3145965, 0, 0, 3145966, 0, 0, 3145967, 0, 0, 3145968, 0, 0, 3145969, 0, 0, 3145970, 0, 0, 3146068, 0, 0, 3146069, 0, 0, 3146070, 0, 0, 3146071, 0, 0, 3146072, 0, 0, 3146073, 0, 0, 3146074, 0, 0, 3146075, 0, 0, 3146076, 0, 0, 3146077, 0, 0, 3146078, 0, 0, 3146079, 0, 0, 3146080, 0, 0, 3146081, 0, 0, 3146082, 0, 0, 3146083, 0, 0, 3146084, 0, 0, 3146085, 0, 0, 3146086, 0, 0, 3146087, 0, 0, 3146088, 0, 0, 3146089, 0, 0, 3146090, 0, 0, 3146091, 0, 0, 3146092, 0, 0, 3146093, 0, 0, 3146094, 0, 0, 3146095, 0, 0, 3211389, 0, 0, 3211406, 0, 0, 3211407, 0, 0, 3211429, 0, 0, 3211430, 0, 0, 3211444, 0, 0, 3211459, 0, 0, 3211491, 0, 0, 3211506, 0, 0, 3211507, 0, 0, 3211603, 0, 0, 3211604, 0, 0, 3211609, 0, 0, 3211612, 0, 0, 3211631, 0, 0, 3276925, 0, 0, 3276943, 0, 0, 3276965, 0, 0, 3276966, 0, 0, 3276980, 0, 0, 3276995, 0, 0, 3277043, 0, 0, 3277044, 0, 0, 3277138, 0, 0, 3277139, 0, 0, 3277145, 0, 0, 3277148, 0, 0, 3277167, 0, 0, 3342461, 0, 0, 3342502, 0, 0, 3342516, 0, 0, 3342580, 0, 0, 3342581, 0, 0, 3342673, 0, 0, 3342674, 0, 0, 3342681, 0, 0, 3342684, 0, 0, 3342703, 0, 0, 3407997, 0, 0, 3408117, 0, 0, 3408118, 0, 0, 3408208, 0, 0, 3408209, 0, 0, 3408217, 0, 0, 3408239, 0, 0, 3473533, 0, 0, 3473635, 0, 0, 3473654, 0, 0, 3473655, 0, 0, 3473656, 0, 0, 3473657, 0, 0, 3473658, 0, 0, 3473659, 0, 0, 3473660, 0, 0, 3473661, 0, 0, 3473662, 0, 0, 3473663, 0, 0, 3473664, 0, 0, 3473665, 0, 0, 3473666, 0, 0, 3473667, 0, 0, 3473668, 0, 0, 3473669, 0, 0, 3473670, 0, 0, 3473671, 0, 0, 3473672, 0, 0, 3473673, 0, 0, 3473674, 0, 0, 3473675, 0, 0, 3473676, 0, 0, 3473677, 0, 0, 3473678, 0, 0, 3473679, 0, 0, 3473680, 0, 0, 3473681, 0, 0, 3473682, 0, 0, 3473683, 0, 0, 3473684, 0, 0, 3473685, 0, 0, 3473686, 0, 0, 3473687, 0, 0, 3473688, 0, 0, 3473689, 0, 0, 3473690, 0, 0, 3473691, 0, 0, 3473692, 0, 0, 3473693, 0, 0, 3473694, 0, 0, 3473695, 0, 0, 3473696, 0, 0, 3473697, 0, 0, 3473698, 0, 0, 3473699, 0, 0, 3473700, 0, 0, 3473701, 0, 0, 3473702, 0, 0, 3473703, 0, 0, 3473704, 0, 0, 3473705, 0, 0, 3473706, 0, 0, 3473707, 0, 0, 3473708, 0, 0, 3473709, 0, 0, 3473710, 0, 0, 3473711, 0, 0, 3473712, 0, 0, 3473713, 0, 0, 3473714, 0, 0, 3473715, 0, 0, 3473716, 0, 0, 3473717, 0, 0, 3473718, 0, 0, 3473719, 0, 0, 3473720, 0, 0, 3473721, 0, 0, 3473722, 0, 0, 3473723, 0, 0, 3473724, 0, 0, 3473725, 0, 0, 3473726, 0, 0, 3473727, 0, 0, 3473728, 0, 0, 3473729, 0, 0, 3473730, 0, 0, 3473731, 0, 0, 3473732, 0, 0, 3473733, 0, 0, 3473734, 0, 0, 3473735, 0, 0, 3473736, 0, 0, 3473737, 0, 0, 3473738, 0, 0, 3473739, 0, 0, 3473740, 0, 0, 3473741, 0, 0, 3473742, 0, 0, 3473743, 0, 0, 3473744, 0, 0, 3473775, 0, 0, 3539069, 0, 0, 3539171, 0, 0, 3539196, 0, 0, 3539206, 0, 0, 3539214, 0, 0, 3539224, 0, 0, 3539232, 0, 0, 3539249, 0, 0, 3539268, 0, 0, 3539311, 0, 0, 3604605, 0, 0, 3604619, 2, 0, 3604642, 2, 0, 3604675, 0, 0, 3604699, 2, 0, 3604700, 1, 0, 3604701, 1, 0, 3604702, 1, 0, 3604703, 1, 0, 3604704, 1, 0, 3604705, 1, 0, 3604706, 1, 0, 3604707, 0, 0, 3604708, 1, 0, 3604709, 1, 0, 3604710, 1, 0, 3604711, 1, 0, 3604712, 1, 0, 3604713, 1, 0, 3604714, 1, 0, 3604715, 3, 0, 3604828, 0, 0, 3604847, 0, 0, 3604848, 0, 0, 3604849, 0, 0, 3604850, 0, 0, 3604851, 0, 0, 3604852, 0, 0, 3604853, 0, 0, 3604854, 0, 0, 3670141, 0, 0, 3670142, 3, 0, 3670154, 2, 0, 3670155, 0, 0, 3670177, 2, 0, 3670178, 0, 0, 3670196, 0, 0, 3670211, 0, 0, 3670233, 2, 0, 3670234, 2, 0, 3670235, 0, 0, 3670236, 0, 0, 3670237, 0, 0, 3670238, 0, 0, 3670239, 0, 0, 3670240, 0, 0, 3670241, 0, 0, 3670242, 0, 0, 3670243, 0, 0, 3670244, 0, 0, 3670245, 0, 0, 3670246, 0, 0, 3670247, 0, 0, 3670248, 0, 0, 3670249, 0, 0, 3670250, 0, 0, 3670251, 0, 0, 3670252, 3, 0, 3670253, 3, 0, 3670273, 0, 0, 3670282, 0, 0, 3670291, 0, 0, 3670300, 0, 0, 3670361, 0, 0, 3670364, 0, 0, 3670390, 0, 0, 3735677, 0, 0, 3735678, 0, 0, 3735679, 1, 0, 3735680, 1, 0, 3735681, 1, 0, 3735682, 1, 0, 3735683, 1, 0, 3735684, 1, 0, 3735685, 1, 0, 3735686, 1, 0, 3735687, 1, 0, 3735688, 1, 0, 3735689, 1, 0, 3735690, 0, 0, 3735691, 0, 0, 3735692, 1, 0, 3735693, 1, 0, 3735694, 1, 0, 3735695, 1, 0, 3735696, 1, 0, 3735697, 1, 0, 3735698, 1, 0, 3735699, 1, 0, 3735700, 1, 0, 3735701, 1, 0, 3735702, 1, 0, 3735703, 1, 0, 3735704, 1, 0, 3735705, 1, 0, 3735706, 1, 0, 3735707, 1, 0, 3735708, 1, 0, 3735709, 1, 0, 3735710, 1, 0, 3735711, 1, 0, 3735712, 1, 0, 3735713, 0, 0, 3735714, 0, 0, 3735715, 1, 0, 3735716, 1, 0, 3735717, 1, 0, 3735718, 1, 0, 3735719, 1, 0, 3735720, 1, 0, 3735721, 1, 0, 3735722, 1, 0, 3735723, 1, 0, 3735724, 1, 0, 3735725, 1, 0, 3735726, 1, 0, 3735727, 1, 0, 3735728, 1, 0, 3735729, 1, 0, 3735730, 1, 0, 3735731, 1, 0, 3735732, 0, 0, 3735733, 1, 0, 3735734, 1, 0, 3735735, 1, 0, 3735736, 1, 0, 3735737, 1, 0, 3735738, 1, 0, 3735739, 1, 0, 3735740, 1, 0, 3735741, 1, 0, 3735742, 1, 0, 3735743, 1, 0, 3735744, 1, 0, 3735745, 1, 0, 3735746, 1, 0, 3735747, 0, 0, 3735748, 1, 0, 3735749, 1, 0, 3735750, 1, 0, 3735751, 1, 0, 3735752, 1, 0, 3735753, 1, 0, 3735754, 1, 0, 3735755, 1, 0, 3735756, 1, 0, 3735757, 1, 0, 3735758, 1, 0, 3735759, 1, 0, 3735760, 1, 0, 3735761, 1, 0, 3735762, 1, 0, 3735763, 1, 0, 3735764, 1, 0, 3735765, 1, 0, 3735766, 1, 0, 3735767, 1, 0, 3735768, 1, 0, 3735769, 0, 0, 3735770, 0, 0, 3735771, 0, 0, 3735772, 0, 0, 3735773, 0, 0, 3735774, 0, 0, 3735775, 0, 0, 3735776, 0, 0, 3735777, 0, 0, 3735778, 0, 0, 3735779, 0, 0, 3735780, 0, 0, 3735781, 0, 0, 3735782, 0, 0, 3735783, 0, 0, 3735784, 0, 0, 3735785, 0, 0, 3735786, 0, 0, 3735787, 0, 0, 3735788, 0, 0, 3735789, 0, 0, 3735790, 1, 0, 3735791, 1, 0, 3735792, 1, 0, 3735793, 1, 0, 3735794, 1, 0, 3735795, 1, 0, 3735796, 1, 0, 3735797, 1, 0, 3735798, 1, 0, 3735799, 1, 0, 3735800, 1, 0, 3735801, 1, 0, 3735802, 1, 0, 3735803, 1, 0, 3735804, 1, 0, 3735805, 1, 0, 3735806, 1, 0, 3735807, 1, 0, 3735808, 1, 0, 3735810, 1, 0, 3735811, 1, 0, 3735812, 1, 0, 3735813, 1, 0, 3735814, 1, 0, 3735815, 1, 0, 3735816, 1, 0, 3735817, 1, 0, 3735819, 1, 0, 3735820, 1, 0, 3735821, 1, 0, 3735822, 1, 0, 3735823, 1, 0, 3735824, 1, 0, 3735825, 1, 0, 3735826, 1, 0, 3735827, 1, 0, 3735828, 1, 0, 3735829, 1, 0, 3735830, 1, 0, 3735831, 1, 0, 3735832, 1, 0, 3735833, 1, 0, 3735834, 1, 0, 3735835, 1, 0, 3735836, 1, 0, 3735837, 1, 0, 3735838, 3, 0, 3735857, 0, 0, 3735876, 0, 0, 3735897, 0, 0, 3735926, 0, 0, 3801375, 3, 0, 3801430, 2, 0, 3801462, 0, 0, 3866912, 3, 0, 3866926, 2, 0, 3866945, 2, 0, 3866965, 2, 0, 3866966, 0, 0, 3866998, 0, 0, 3932449, 3, 0, 3932461, 2, 0, 3932462, 0, 0, 3932480, 2, 0, 3932481, 0, 0, 3932500, 2, 0, 3932501, 0, 0, 3932502, 0, 0, 3932524, 0, 0, 3932534, 0, 0, 3997986, 3, 0, 3997996, 2, 0, 3997997, 0, 0, 3997998, 0, 0, 3998015, 2, 0, 3998016, 0, 0, 3998017, 0, 0, 3998035, 2, 0, 3998036, 0, 0, 3998037, 0, 0, 3998038, 0, 0, 3998056, 2, 0, 3998060, 0, 0, 3998070, 0, 0, 4063523, 1, 0, 4063524, 1, 0, 4063525, 1, 0, 4063526, 1, 0, 4063527, 1, 0, 4063528, 1, 0, 4063529, 1, 0, 4063530, 1, 0, 4063531, 1, 0, 4063532, 1, 0, 4063533, 1, 0, 4063534, 1, 0, 4063535, 1, 0, 4063536, 1, 0, 4063537, 1, 0, 4063538, 1, 0, 4063539, 1, 0, 4063540, 1, 0, 4063541, 1, 0, 4063542, 1, 0, 4063543, 1, 0, 4063544, 1, 0, 4063545, 1, 0, 4063546, 1, 0, 4063547, 1, 0, 4063548, 1, 0, 4063549, 1, 0, 4063550, 1, 0, 4063551, 0, 0, 4063552, 0, 0, 4063553, 0, 0, 4063554, 1, 0, 4063555, 1, 0, 4063556, 1, 0, 4063557, 1, 0, 4063558, 1, 0, 4063559, 1, 0, 4063560, 1, 0, 4063561, 1, 0, 4063562, 1, 0, 4063563, 1, 0, 4063564, 1, 0, 4063565, 1, 0, 4063566, 1, 0, 4063567, 1, 0, 4063568, 1, 0, 4063569, 1, 0, 4063570, 1, 0, 4063571, 0, 0, 4063572, 0, 0, 4063573, 0, 0, 4063574, 0, 0, 4063575, 1, 0, 4063576, 1, 0, 4063577, 1, 0, 4063578, 1, 0, 4063579, 1, 0, 4063580, 1, 0, 4063581, 1, 0, 4063582, 1, 0, 4063583, 1, 0, 4063584, 1, 0, 4063585, 1, 0, 4063586, 1, 0, 4063587, 1, 0, 4063588, 1, 0, 4063589, 1, 0, 4063590, 1, 0, 4063591, 1, 0, 4063592, 0, 0, 4063593, 1, 0, 4063594, 1, 0, 4063595, 1, 0, 4063596, 0, 0, 4063606, 0, 0, 4129132, 0, 0, 4129142, 0, 0, 4194668, 0, 0, 4194678, 0, 0, 4260204, 0, 0, 4260214, 0, 0, 4325740, 0, 0, 4325750, 0, 0, 4391276, 0, 0, 4391277, 0, 0, 4391278, 0, 0, 4391279, 0, 0, 4391286, 0, 0, 4456812, 0, 0, 4456822, 0, 0, 4522348, 0, 0, 4522358, 0, 0, 4587884, 0, 0, 4587891, 0, 0, 4587892, 0, 0, 4587893, 0, 0, 4587894, 0, 0, 4653420, 0, 0, 4653430, 0, 0, 4718956, 0, 0, 4718966, 0, 0, 4784492, 0, 0, 4784502, 0, 0, 4850028, 0, 0, 4850038, 0, 0, 4915564, 0, 0, 4915574, 0, 0, 4981100, 0, 0, 4981101, 0, 0, 4981102, 0, 0, 4981103, 0, 0, 4981108, 0, 0, 4981109, 0, 0, 4981110, 0, 0, 5046636, 0, 0, 5046646, 0, 0, 5112172, 0, 0, 5112182, 0, 0, 5177708, 0, 0, 5177718, 0, 0, 5243244, 0, 0, 5243254, 0, 0, 5308780, 0, 0, 5308790, 0, 0, 5374316, 0, 0, 5374326, 0, 0, 5439852, 0, 0, 5439862, 0, 0, 5505388, 0, 0, 5505389, 0, 0, 5505390, 0, 0, 5505395, 0, 0, 5505396, 0, 0, 5505397, 0, 0, 5505398, 0, 0, 5570924, 0, 0, 5570925, 0, 0, 5570926, 0, 0, 5570931, 0, 0, 5570932, 0, 0, 5570933, 0, 0, 5570934, 0, 0, 5636460, 0, 0, 5636470, 0, 0, 5701996, 0, 0, 5702006, 0, 0, 5767532, 0, 0, 5767542, 0, 0, 5833068, 0, 0, 5833069, 0, 0, 5833070, 0, 0, 5833071, 0, 0, 5833075, 0, 0, 5833076, 0, 0, 5833077, 0, 0, 5833078, 0, 0, 5898604, 0, 0, 5898614, 0, 0, 5964140, 0, 0, 5964150, 0, 0, 6029676, 0, 0, 6029686, 0, 0, 6095212, 0, 0, 6095222, 0, 0, 6160748, 0, 0, 6160749, 0, 0, 6160750, 0, 0, 6160751, 0, 0, 6160755, 0, 0, 6160756, 0, 0, 6160757, 0, 0, 6160758, 0, 0, 6226284, 0, 0, 6226294, 0, 0, 6291820, 0, 0, 6291830, 0, 0, 6357356, 0, 0, 6357366, 0, 0, 6422892, 0, 0, 6422902, 0, 0, 6488428, 0, 0, 6488429, 0, 0, 6488433, 0, 0, 6488437, 0, 0, 6488438, 0, 0, 6553964, 0, 0, 6553974, 0, 0, 6619500, 0, 0, 6619510, 0, 0, 6685036, 0, 0, 6685046, 0, 0, 6750572, 0, 0, 6750582, 0, 0, 6816108, 0, 0, 6816118, 0, 0, 6881644, 0, 0, 6881654, 0, 0, 6947180, 0, 0, 6947190, 0, 0, 7012716, 0, 0, 7012717, 4, 0, 7012718, 4, 0, 7012719, 4, 0, 7012720, 4, 0, 7012721, 4, 0, 7012722, 4, 0, 7012723, 4, 0, 7012724, 4, 0, 7012725, 4, 0, 7012726, 0, 0, 7078252, 0, 0, 7078253, 4, 0, 7078254, 4, 0, 7078255, 4, 0, 7078256, 4, 0, 7078257, 4, 0, 7078258, 4, 0, 7078259, 4, 0, 7078260, 4, 0, 7078261, 4, 0, 7078262, 0, 0, 7143788, 0, 0, 7143789, 1, 0, 7143790, 1, 0, 7143791, 1, 0, 7143792, 1, 0, 7143793, 1, 0, 7143794, 1, 0, 7143795, 1, 0, 7143796, 1, 0, 7143797, 1, 0, 7143798, 1, 0 )
_sections_unfolded = [ "Cell" ]

[node name="Player" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( -650.563, 234 )
id = 1
finish_line = Vector2( -1, 5400 )
finish_y_below = true

[node name="Player2" parent="." index="5" instance=ExtResource( 4 )]

position = Vector2( -650.563, 406 )
id = 2
finish_line = Vector2( -1, 5400 )
finish_y_below = true

[node name="Tilefloors" type="Node" parent="." index="6"]

[node name="Player1Screen" type="ViewportContainer" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch = false
stretch_shrink = 1

[connection signal="first_move" from="Player" to="." method="_on_Player_first_move"]

[connection signal="player_finished" from="Player" to="." method="_on_Player_finished"]

[connection signal="first_move" from="Player2" to="." method="_on_Player_first_move"]

[connection signal="player_finished" from="Player2" to="." method="_on_Player_finished"]


